# AutonomousCar

./: .gitignore  CMakeLists.txt  README.md  _config.yml  about.md  config.rb  contact.md  index.html
ServoTest/: .gitignore  main.cpp
_includes/: header.html
_posts/: 2016-02-04-PlatformIO.markdown  2016-02-11-LIPO_Saftey.markdown
assets/css/: style.css
electronics/: README.md  autoCar.dcm  autoCar.lib
electronics/Board/: MyFirstKiCADProject-cache.lib  MyFirstKiCADProject.bak  MyFirstKiCADProject.kicad_pcb  MyFirstKiCADProject.net  MyFirstKiCADProject.pro  MyFirstKiCADProject.sch  gtb.bak  gtb.lib
electronics/cape/: cape.kicad_pcb  cape.pro  cape.sch  fp-lib-table
electronics/cape/autonomousCar.pretty/: 1_18_CarMount.kicad_mod  D24V50F.kicad_mod  D24V50F5.kicad_mod
electronics/mainBoard/: fp-lib-table  mainBoard.pro
electronics/mainboard/: mainboard.kicad_pcb  mainboard.pro  mainboard.sch  power.sch
electronics/power/: power.pro  power.sch
include/: Motor.h  PWM.h  Steering.h
lib/quicrun1060esc/: QuicrunESC.h
overlay/: STEER_PWM_P9_16_0x6.dts  build  car_pwm_controls-00A0.dts
quicrun1060esc/: QuicrunESC.cpp  QuicrunESC.h
src/: GPIO.cpp  Motor.cpp  PWM.cpp  Steering.cpp  build  fix_permissions.sh  fix_permissions.txt  main-Arduino.cpp  main.cpp  makefile  proc_samples.py  test  util.cpp
